# ru-essay-checker

./: .gitignore  README.md  pyproject.toml  requirements.txt  settings.json  translation.xlsx
docks/: README.md
docs/: README.md
promts/: essay_standard.txt  rus_punctuation.txt  rus_spelling.txt  sample promt.txt  standard.txt
src/: ai_request.py  apikey.py  dir_path.py  dirpaths.py  loadconf.py  main.py  menu_text.py  menutext.py  settings.json  settings.py  warning.py  window.py
src/response/: deep.py  giga.py  mist.py
